Fix auto-repeat key navigation for GridView

Shouldn't set moveReason=SetIndex in key navigation. ListView didn't
do this in its keyPress implementation.

Added extra tests for GridView and ListView.

Task-number: QTBUG-20408
Change-Id: Iaf0f331d3ba4f037c5bbc0a41418dd656b5a3695
Reviewed-on: http://codereview.qt.nokia.com/2318
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Martin Jones <martin.jones@nokia.com>